[package]
name = "ghtkn"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "GitHub token management via OAuth device flow"
license = "MIT"
repository = "https://github.com/user/ghtkn-rust-sdk"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
open = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tempfile = "3"
pretty_assertions = "1"

[lints.clippy]
borrowed_box = "allow"
