[package]
name = "ghtkn"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "GitHub token management — OAuth device flow with keyring caching and config-driven app selection"
license = "MIT"
repository = "https://github.com/TyceHerrman/ghtkn-rust-sdk"
keywords = ["github", "token", "oauth", "keyring", "device-flow"]
authors = ["Tyce Herrman"]
categories = ["authentication"]
documentation = "https://docs.rs/ghtkn"
exclude = [
    ".claude/",
    ".github/",
    "AGENTS.md",
    "CONTRIBUTING.md",
    "cliff.toml",
    "deny.toml",
    "fnox.toml",
    "fnox.local.toml",
    "mise.toml",
    "mise.lock",
    "renovate.json",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "crypto-rust", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
open = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tempfile = "3"
pretty_assertions = "1"

[lints.clippy]
borrowed_box = "allow"
